@@ -1089,6 +1089,12 @@ Example  : chant "peace moon"\n\r\
 This chant will cause the peace moon to rise, preventing and ending combat \
 in the room.
 
+CHANT_PHOSPHORESCENCE=<ABILITY>\
+Usage    : CHANT "PHOSPHORESCENCE"\n\r\
+Example  : chant "phosphorescence"\n\r\
+This chant will cause the casters skin to take on a phosphoescent glow, allow \
+them to see in dark places, especially under water.
+
 CHANT_PIERCINGMOON=CHANT_PIERCING_MOON
 CHANT_PIERCING_MOON=<ABILITY>\
 Usage    : CHANT "PIERCING MOON"\n\r\
