@@ -1,3 +1,5 @@
+# Build 5.9.5 Release ??/??/2016
+   1. New chants: Phosphorescence
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
